# ironmunch

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/commands/: bmad-brainstorming.md  bmad-master.md  bmad-review-edge-cases.md  bmad-tea-teach-me-testing.md  bmad-tea-testarch-automate.md  bmad-tea-testarch-framework.md  bmad-tea-testarch-test-review.md  bmad-tea-testarch-trace.md  bmad-tea.md
.claude/skills/bmad-editorial-prose/: SKILL.md
.claude/skills/bmad-editorial-structure/: SKILL.md
.claude/skills/bmad-help/: SKILL.md
.claude/skills/bmad-index-docs/: SKILL.md
.claude/skills/bmad-party-mode/: SKILL.md
.claude/skills/bmad-review-adversarial/: SKILL.md
.claude/skills/bmad-shard-doc/: SKILL.md
.claude/skills/bmad-tea-testarch-atdd/: SKILL.md
.claude/skills/bmad-tea-testarch-ci/: SKILL.md
.claude/skills/bmad-tea-testarch-nfr/: SKILL.md
.claude/skills/bmad-tea-testarch-test-design/: SKILL.md
.github/workflows/: ci.yml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
benchmark/: four_way_benchmark.py
docs/: architecture.md  ci-secrets-checklist.md  ci.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
docs/decisions/: 001-o-nofollow-file-opens.md  002-env-var-freezing.md  003-content-boundary-spotlighting.md  004-file-backed-rate-limiting.md  005-path-validation-chain.md
hooks/: post-commit  post-push
scripts/: benchmark_latency.py  ci-local.sh  test-changed.sh
src/codesight_mcp/: cli_format.py  discovery.py  security.py  security_rules.py  server.py
src/codesight_mcp/core/: errors.py  locking.py  rate_limiting.py  usage_logging.py  validation.py
src/codesight_mcp/parser/: complexity.py  extractor.py  graph.py  hierarchy.py  languages.py  symbols.py
src/codesight_mcp/storage/: index_store.py
src/codesight_mcp/summarizer/: batch_summarize.py
src/ironmunch/: __init__.py  discovery.py  security.py  server.py
tests/: conftest.py  test_adversarial.py  test_adversarial_chaos.py  test_adversarial_misc.py  test_adversarial_storage.py  test_argument_sensitive_rules.py  test_core_errors.py  test_core_validation.py  test_discovery.py  test_index_cache_shared.py  test_language_depth_batch1.py  test_language_depth_batch2.py  test_language_depth_batch3.py  test_languages_batch1.py  test_languages_batch2.py  test_languages_batch3.py  test_module_level_scan.py  test_new_languages.py  test_parser.py  test_registry.py  test_sbom.py  test_sbom_formats.py  test_search_text.py  test_security_facade.py  test_security_scan.py  test_server.py  test_storage.py  test_storage_hardening.py  test_summarizer.py  test_taint.py  test_tools_file_outline.py  test_tools_file_tree.py  test_tools_get_symbol.py  test_tools_index_folder.py  test_tools_index_repo.py  test_tools_invalidate_cache.py  test_tools_list_repos.py  test_tools_repo_outline.py  test_tools_search_symbols.py
tests/benchmark/: test_token_efficiency.py
tests/ci/: test_ci_config.py
tests/cli/: test_cli_format.py
tests/core/: test_core_boundaries.py  test_core_errors.py  test_core_limits.py  test_core_locking.py  test_core_rate_limiting.py  test_core_validation.py  test_usage_logging.py
tests/fuzz/: test_validate_path_fuzz.py
tests/integration/: test_atomic_write.py  test_concurrent_writes.py  test_integration.py  test_mcp_protocol.py  test_new_tool_chain.py  test_tool_chain.py
tests/security/: test_adv_findings.py  test_adv_scan_2026_03_10.py  test_adv_scan_v2.py  test_adv_scan_v3.py  test_adversarial.py  test_adversarial_chaos.py  test_adversarial_discovery.py  test_adversarial_metadata.py  test_adversarial_misc.py  test_adversarial_scan_v2.py  test_adversarial_storage.py  test_chain_attacks.py  test_edge_case_v2.py  test_fuzzing_scan.py  test_hardening.py  test_no_redact.py  test_security_facade.py  test_storage_hardening.py  test_threat_model.py
tests/server/: test_cli_dispatch.py  test_registry.py  test_server.py  test_structured_logging.py
tests/storage/: test_index_store_unit.py  test_metadata_sidecar.py  test_storage.py
tests/stress/: test_large_codebase.py  test_rate_limiter_stress.py
tests/tools/: test_cross_repo_search.py  test_diff_aware_indexing.py  test_get_changes.py  test_get_context.py  test_get_dependencies.py  test_get_usage_stats.py  test_graph_tools.py  test_lint_index.py  test_search_references.py  test_search_text.py  test_tools_file_outline.py  test_tools_file_tree.py  test_tools_get_dead_code.py  test_tools_index_folder.py  test_tools_index_repo.py  test_tools_invalidate_cache.py  test_tools_list_repos.py  test_tools_repo_outline.py  test_tools_search_symbols.py  test_tools_status.py  test_verify.py
tests/unit/: test_common.py  test_complexity.py  test_diagram.py  test_discovery.py  test_extraction_callables.py  test_graph.py  test_graph_cycles.py  test_hierarchy.py  test_hotspots.py  test_key_symbols.py  test_languages.py  test_parser.py  test_summarizer.py  test_summarizer_injection.py  test_tool_errors.py  test_tree_sitter_smoke.py
(+59 files in other folders)
