[project]
name = "ironmunch"
version = "0.1.0"
description = "Security-hardened, token-efficient MCP server for code exploration via tree-sitter AST parsing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.26.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "anthropic>=0.40.0,<1.0.0",
    "tree-sitter>=0.23.0,<1.0.0",
    "tree-sitter-python>=0.23.0,<1.0.0",
    "tree-sitter-javascript>=0.23.0,<1.0.0",
    "tree-sitter-typescript>=0.23.0,<1.0.0",
    "tree-sitter-go>=0.23.0,<1.0.0",
    "tree-sitter-rust>=0.23.0,<1.0.0",
    "tree-sitter-java>=0.23.0,<1.0.0",
    "tree-sitter-php>=0.23.0,<1.0.0",
    "pathspec>=0.12.0,<1.0.0",
]

[project.scripts]
ironmunch = "ironmunch.server:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ironmunch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
