# SECURITY NOTE: 'codesight-mcp' is not registered on PyPI. Do not install from
# PyPI. Install only from the source repository: pip install -e .
# (Risk: a malicious actor could publish 'codesight-mcp' to PyPI.)
[project]
name = "codesight-mcp"
version = "0.1.0"
description = "Security-hardened, token-efficient MCP server for code exploration via tree-sitter AST parsing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "mcp>=1.26.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "anthropic>=0.40.0,<1.0.0",
    "tree-sitter>=0.23.0,<1.0.0",
    "tree-sitter-python>=0.23.0,<1.0.0",
    "tree-sitter-javascript>=0.23.0,<1.0.0",
    "tree-sitter-typescript>=0.23.0,<1.0.0",
    "tree-sitter-go>=0.23.0,<1.0.0",
    "tree-sitter-rust>=0.23.0,<1.0.0",
    "tree-sitter-java>=0.23.0,<1.0.0",
    "tree-sitter-php>=0.23.0,<1.0.0",
    "tree-sitter-c>=0.24.0,<1.0.0",
    "tree-sitter-cpp>=0.23.0,<1.0.0",
    "tree-sitter-c-sharp>=0.23.0,<1.0.0",
    "tree-sitter-ruby>=0.23.0,<1.0.0",
    "tree-sitter-swift>=0.0.1,<1.0.0",
    "tree-sitter-kotlin>=1.0.0,<2.0.0",
    "tree-sitter-language-pack>=0.13.0,<1.0.0",
    "pathspec>=0.12.0,<2.0.0",
]

[project.scripts]
codesight-mcp = "codesight_mcp.server:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "pytest-split>=0.9.0,<1.0.0",
]
semantic = [
    "fastembed>=0.4.0,<1.0.0",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codesight_mcp"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]  # line length handled by line-length setting

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "benchmark: token efficiency and performance benchmarks",
    "ci: CI workflow configuration validation tests",
    "fuzz: fuzzing / property-based tests with random inputs",
    "stress: stress and load tests (rate limiting, large codebases)",
]
